# Spotdl-Gui

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  BUILD_CHECKLIST.md  DEVELOPMENT_MODES.md  PAVOTIFY_README.md  QUICK_START.md  TAURI_COMMANDS.md  index.css  package.json.example  setup.bat  setup.sh  vite.config.ts.example
src/backend/: README.md  spotdl_server.py
src/lib/: tauri-helpers.ts
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/icons/: README.md
src/src-tauri/src/: main.rs
src/types/: tauri.d.ts
